Criando a estrutura do header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
     <title>Projeto 5</title>
 </head>
 <body>
-    <!-- chamando o js externo -->
+
+     <section class="hero">
+        <header>
+            <h1><span>Loja</span>Cars</h1>
+            <nav>
+                <ul class="header-menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Carros</a></li>
+                    <li><a href="#">Lojas</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <h2 id="titulo">A ENERGIA QUE <span>MOVE SEU VEÍCULO</span></h2>
+     </section>
+    <!-- CHAMANDO O JS EXTERNO -->
     <script src="./src/js/script.js"></script>
 </body>
 </html>
