--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Projeto 5</title>
 </head>
 <body>
-
+<!-- CRIANDO UMA SECTION -->
      <section class="hero">
         <header>
             <h1><span>Loja</span>Cars</h1>
